<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Item Value Generator">

        <EditTextPreference
            android:key="settings_generatorPeriod"
            android:title="@string/settings_general_generatorPeriod"
            android:defaultValue="@string/settings_general_defaultGeneratorPeriod"
            android:summary="@string/settings_general_generatorPeriodSummary"
            android:selectAllOnFocus="true"
            android:inputType="numberDecimal"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="TCP socket timeout">

        <EditTextPreference
            android:key="settings_TCPinTimeout"
            android:title="@string/settings_general_TCPinTimeout"
            android:defaultValue="@string/settings_general_defaultTCPinTimeout"
            android:summary="@string/settings_general_TCPinTimeoutSummary"
            android:selectAllOnFocus="false"
            android:inputType="numberDecimal"/>

        <EditTextPreference
            android:key="settings_TCPoutTimeout"
            android:title="@string/settings_general_TCPoutTimeout"
            android:defaultValue="@string/settings_general_defaultTCPoutTimeout"
            android:summary="@string/settings_general_TCPoutTimeoutSummary"
            android:selectAllOnFocus="false"
            android:inputType="numberDecimal"/>

    </PreferenceCategory>


</PreferenceScreen>