<TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="@dimen/padding_2dp">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvSender1Group"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:id="@+id/tvSender1Group"
    />
    </TableRow>

<TableRow
android:layout_width="wrap_content"
android:layout_height="wrap_content">

<TextView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/tvItemValue"
    android:layout_weight="1"
    />

<EditText
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/etItemValue1"
    android:id="@+id/etItemValue1"
    android:inputType="text|number">
</EditText>

<CheckBox
    android:layout_width="50dp"
    android:layout_height="wrap_content"
    android:text="@string/ckRandom"
    android:layout_weight="1"
    android:id="@+id/cbRandomItemValue1"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:checked="false"
    android:layout_column="4" />

</TableRow>

<TableRow
android:layout_width="wrap_content"
android:layout_height="wrap_content"
    >

<CheckBox
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/tvSender2Group"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:id="@+id/cbHost2Group"
    android:checked="false"
    />
</TableRow>

<TableRow
android:layout_width="wrap_content"
android:layout_height="wrap_content"
    >

<TextView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/tvItemValue"
    android:layout_weight="1"
    />

<EditText
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/etItemValue2"
    android:id="@+id/etItemValue2"
    android:inputType="text|number"
    android:enabled="false">
</EditText>

<CheckBox
    android:layout_width="50dp"
    android:layout_height="wrap_content"
    android:text="@string/ckRandom"
    android:layout_weight="1"
    android:id="@+id/cbRandomItemValue2"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:checked="false"
    android:enabled="false"
    android:layout_column="4" />
</TableRow>

<LinearLayout
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:layout_weight="1">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/tvSent"
    android:textAppearance="?android:attr/textAppearanceMedium"
    />

<ScrollView
    android:id="@+id/scrollView1"
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTerminal_tx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</ScrollView>

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/tvReceived"
    android:textAppearance="?android:attr/textAppearanceMedium"
    />

<ScrollView
    android:id="@+id/scrollView2"
    android:layout_weight="1"
    android:layout_width="match_parent"
    android:layout_height="180dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTerminal_rx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</ScrollView>



</LinearLayout>


<TableRow
android:layout_width="wrap_content"
android:layout_height="wrap_content">

<CheckBox
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/cbConstantSent"
    android:layout_weight="1"
    android:id="@+id/cbConstantSend"
    android:checked="false"
    android:enabled="false"
    />

<Button
    android:id="@+id/btSend"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/btSendSend"
    android:onClick="btSendClick"
    />
<requestFocus>

</requestFocus>
</TableRow>

<TableRow
android:layout_width="wrap_content"
android:layout_height="wrap_content">

<TextView
    android:id="@+id/tvStatus"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/tvStatus" />

<ProgressBar
    style="?android:attr/progressBarStyleSmall"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/prbSending" />
</TableRow>

    </TableLayout>